[gd_scene load_steps=14 format=3 uid="uid://cpy6ahpj03e33"]

[ext_resource type="Script" path="res://Player.gd" id="1_sf678"]
[ext_resource type="Texture2D" uid="uid://cte7fpe1vs3qx" path="res://ARTE PFC/copeta/gun.png" id="2_08vru"]
[ext_resource type="Texture2D" uid="uid://8nbcvp3af4tw" path="res://ARTE PFC/shoot.png" id="3_v8t01"]
[ext_resource type="Script" path="res://spawn_manager.gd" id="4_7ga08"]
[ext_resource type="Texture2D" uid="uid://uuxd78a83cvs" path="res://ARTE PFC/copeta/punto.png" id="4_qcx7a"]
[ext_resource type="Script" path="res://UpgradeManager.gd" id="5_5gy0m"]
[ext_resource type="PackedScene" uid="uid://bx4yw3my03hxh" path="res://enemyscene.tscn" id="5_7w8dc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bvpt4"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_r82ql"]
sky_material = SubResource("ProceduralSkyMaterial_bvpt4")

[sub_resource type="Environment" id="Environment_vym3e"]
background_mode = 2
sky = SubResource("Sky_r82ql")
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vjud6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_k1r3q"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SpriteFrames" id="SpriteFrames_87gny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_v8t01")
}, {
"duration": 1.0,
"texture": ExtResource("3_v8t01")
}, {
"duration": 1.0,
"texture": ExtResource("2_08vru")
}],
"loop": false,
"name": &"disparo",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_08vru")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vym3e")

[node name="Room" type="Node3D" parent="."]

[node name="pared2" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 5, 0)
use_collision = true
size = Vector3(0.002, 10, 80)

[node name="pared" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 5, 0)
use_collision = true
size = Vector3(0.002, 10, 80)

[node name="pared3" type="CSGBox3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 5, -40)
use_collision = true
size = Vector3(0.002, 10, 80)

[node name="pared4" type="CSGBox3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 5, 40)
use_collision = true
size = Vector3(0.002, 10, 80)

[node name="suelo2" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.998, 0)
use_collision = true
size = Vector3(80, 0.002, 80)

[node name="suelo" type="CSGBox3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.002, 0)
use_collision = true
size = Vector3(80, 0.002, 80)

[node name="OmniLight3D" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 9, -20)
light_color = Color(1, 1, 0.854902, 1)
light_energy = 5.0
light_specular = 1.0
omni_range = 81.1311

[node name="OmniLight3D2" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 9, -20)
light_color = Color(1, 1, 0.854902, 1)
light_energy = 5.0
light_specular = 1.0
omni_range = 81.1311

[node name="OmniLight3D3" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 9, 20)
light_color = Color(1, 1, 0.854902, 1)
light_energy = 5.0
light_specular = 1.0
omni_range = 81.1311

[node name="OmniLight3D4" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 9, 20)
light_color = Color(1, 1, 0.854902, 1)
light_energy = 5.0
light_specular = 1.0
omni_range = 81.1311

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
script = ExtResource("1_sf678")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_vjud6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_k1r3q")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7176, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.373293)

[node name="Sprite2D" type="Sprite2D" parent="Player/Head/Camera3D"]
position = Vector2(576.889, 324.5)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_qcx7a")

[node name="Gun" type="AnimatedSprite2D" parent="Player/Head/Camera3D"]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_87gny")
animation = &"disparo"
centered = false

[node name="RayCast3D" type="RayCast3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.149, -0.121662)

[node name="BULLETPOS" type="Node3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.205821, -0.149397, -1.11233)

[node name="ShootCoolDown" type="Timer" parent="Player"]
one_shot = true

[node name="Detector" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_k1r3q")

[node name="UpgradeManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 9, 20)
script = ExtResource("5_5gy0m")

[node name="Canvas" type="Node2D" parent="."]

[node name="UpgradeScreen" type="CanvasGroup" parent="Canvas"]
process_mode = 2
visible = false

[node name="TextEdit" type="TextEdit" parent="Canvas/UpgradeScreen"]
modulate = Color(1, 1, 1, 0.964706)
offset_left = 418.0
offset_top = 32.0
offset_right = 571.0
offset_bottom = 67.0
scale = Vector2(2, 2)
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "CHOOSE UPGRADE"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
scroll_fit_content_height = true

[node name="ATKDMGButton" type="Button" parent="Canvas/UpgradeScreen"]
process_mode = 2
offset_left = 200.0
offset_top = 130.0
offset_right = 450.0
offset_bottom = 430.0
text = "ATTACK
DAMAGE"

[node name="ATKSPDButton" type="Button" parent="Canvas/UpgradeScreen"]
process_mode = 2
offset_left = 695.0
offset_top = 130.0
offset_right = 945.0
offset_bottom = 430.0
text = "ATTACK
SPEED"

[node name="Layout" type="CanvasGroup" parent="Canvas"]

[node name="TotalDeadEnemiesTXT" type="Label" parent="Canvas/Layout"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 945.0
offset_right = 985.0
offset_bottom = 23.0
grow_horizontal = 0
scale = Vector2(5, 5)
text = "0"
horizontal_alignment = 1

[node name="VidaTXT" type="Label" parent="Canvas/Layout"]
offset_top = 530.0
offset_right = 40.0
offset_bottom = 553.0
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(0, 0.756863, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnManager" type="Node3D" parent="."]
script = ExtResource("4_7ga08")
enemyscene = ExtResource("5_7w8dc")

[node name="PositiveLimit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 1, 37)

[node name="NegativeLimit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37, 1, -37)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="Canvas/UpgradeScreen/ATKDMGButton" to="Player" method="_on_atkdmg_button_pressed"]
[connection signal="pressed" from="Canvas/UpgradeScreen/ATKDMGButton" to="UpgradeManager" method="_on_atkdmg_button_pressed"]
[connection signal="pressed" from="Canvas/UpgradeScreen/ATKSPDButton" to="Player" method="_on_atkspd_button_pressed"]
[connection signal="pressed" from="Canvas/UpgradeScreen/ATKSPDButton" to="UpgradeManager" method="_on_atkspd_button_pressed"]
